--- a/card.css
+++ b/card.css
@@ -11,7 +11,8 @@
 	box-shadow: 4px 7px #888888;
 	position: relative;
 	font-size: 14px;
-	transition: top 1s;
+	left: 0;
+	transition: all 0.2s linear;
 }
 
 #card1 .card {
@@ -102,13 +103,18 @@
 }
 
 .move-right {
-	left: 20px;
+	left: 50px;
 }
 
 .move-left {
-	left: -20px;
+	left: -50px;
 }
 
 .highlight {
 	background: yellow;
+}
+
+.lift {
+	transform: translate(-4px, -7px);
+	box-shadow: 8px 14px #888888;
 }
