--- a/style/card.css
+++ b/style/card.css
@@ -56,8 +56,8 @@
 	display: none;
 }
 
-.card .general .center .image-animation.active {
-	display: block;
+.card .general .center .image-animation {
+	display: none;
 	position: absolute;
 	top: 100px;
 	left: 72px;
@@ -67,6 +67,21 @@
 	text-align: center;
 	font-size: 18px;
 	padding: 8px 0;
+}
+
+.card .general .center .image-animation.active-positive {
+	display: block;
+	background: green;
+}
+
+.card .general .center .image-animation.active-neutral {
+	display: block;
+	background: yellow;
+}
+
+.card .general .center .image-animation.active-negative {
+	display: block;
+	background: red;
 }
 
 .card .general .center .image {
